--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     display: flex;
     background-color: #2D25A0;
     justify-content: space-between;
+    margin-bottom: 60px;
 
 }
 .top-photo img{
@@ -21,6 +22,7 @@ body{
 .top-photo:hover{
     transform: rotate(360deg);
     transition: transform 1s;
+    transform-origin: center;
 }
 .top-text{
     text-align: center;
@@ -45,4 +47,30 @@ body{
     padding: 20px;
     font-size: 20px;
     border-radius: 20px;
+}
+
+
+/*Football Players Style */
+.football-players{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-column-gap: 60px;
+    justify-content: center;
+}
+.player{
+    padding: 15px;
+    margin-bottom: 20px;
+    width: 330px;
+    height: 474px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+}
+.player-photo img{
+    padding-left: 20px;
+    width: 300px;
+    height: 256px;
+    
+}
+.player-detail{
+    color:  #6C6C6C;
 }
