--- a/style.css
+++ b/style.css
@@ -74,3 +74,124 @@ body{
 .player-detail{
     color:  #6C6C6C;
 }
+/* Styling The Follow Section */
+
+
+.follow{
+    display: flex;
+    justify-content: center;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    background-color: #2D25A0;
+    margin-bottom: 100px;
+}
+.follow-item{
+    padding-top: 50px;
+    padding-right: 100px;
+    padding-left: 20px;
+}
+.follow-detail{
+    text-align: center;
+}
+.follow-detail h2{
+    color: whitesmoke;
+}
+.follow-detail button{
+    background-color: #E02C6D;
+    border-radius: 30px;
+    color: antiquewhite;
+    padding: 10px 24px;
+    margin-bottom: 50px;
+}
+.follow-detail button:hover{
+    color: black;
+    font-size: 20px;
+    border-radius: 20px;
+}
+.follow .follow-item img{
+    width: 150px;
+    height: 150px;
+}
+/* Styling The footer */
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+.footer .footer-image img{
+    width: 600px;
+    height: 200px;
+}
+.footer-icon i{
+    width: 50px;
+    height: 50px;
+    color: gray;
+}
+/*---------------
+ Media Queries
+ -----------------*/
+
+ /* Mobile Devices */
+ @media only screen and (max-width:688px){
+    .top-banner{
+        flex-wrap: wrap;
+        margin: 0%;
+        width: 100%;
+        height: 100%;
+    }
+    .top-banner h1{
+        text-align: left;
+        padding:0px;
+    }
+    .top-photo img{
+        padding:0px;
+        width: 329px;
+        height: 259.17px;
+        margin-top: 30px;
+    }
+    .football-players{
+        grid-template-columns: repeat(1,1fr);
+        width: 100%;
+    }
+    .follow{
+        flex-wrap: wrap;
+    }
+    .footer{
+        flex-wrap: wrap;
+    }
+    .footer .footer-image img{
+        width: 250px;
+        height: 150px;
+    }
+ }
+/* Tablet Devices */
+@media only screen and (min-width: 689px) and (max-width: 992px){
+    .top-banner{
+        flex-wrap: wrap;
+        margin: 0%;
+    }
+    .top-banner h1{
+        text-align: left;
+        padding:0px;
+    }
+    
+    .top-photo img{
+        padding:0px;
+        width: 500px;
+        height: 400px;
+        margin-top: 75px;
+        margin-bottom: 50px;
+    }
+    .football-players{
+         grid-template-columns: repeat(2,1fr);
+         grid-column-gap: 60px;
+         width: 100%;
+         margin-top: 50px;
+     }
+     .follow{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    }
